--- a/DonationI.html
+++ b/DonationI.html
@@ -231,5 +231,8 @@
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
 
+  <!-- Email Script Source-->
+  <script src="https://smtpjs.com/v3/smtp.js"></script>  
+
 </body>
 </html>
