--- a/DonationI.html
+++ b/DonationI.html
@@ -166,7 +166,7 @@
               <div class="validation"></div>
             </div>
 		  <div><p id="finish"></p></div>
-            <div class="text-center"><button type="submit" onclick="check(); sendEmail(); return false">Submit</button></div>
+            <div class="text-center"><button type="submit" onclick="check(); return false">Submit</button></div>
           </form>
 		  
         </div>
