--- a/DonationI.html
+++ b/DonationI.html
@@ -86,7 +86,9 @@
 
         <header class="section-header">
           <h3>In-Kind Donations</h3>
-          <p>Please fill in the fields below in order for us to process your donation.</p>
+          <p>Please fill in the fields below in order for us to process your donation. If successful, an email will be sent to NVFS
+	     and you will get a confirmation alert on your screen.
+	  </p>
         </header>
 
 <div class="form">
@@ -109,8 +111,17 @@
 		Password : "!Test123456",
 		To : 'tempemailtest321@gmail.com',
 		From : "tempemailtest321@gmail.com",
-		Subject : "This is a test",
-		Body : "This is a test",
+		Subject : "In-Kind Doantion from" + (document.myform.fname.value) + " " + (document.myform.lname.value),
+		Body : "This donation is from " + (document.myform.fname.value) + " " + (document.myform.lname.value) +
+			"<br> Address: " + (document.myform.address.value) + " " + (document.myform.city.value) + ", " + 
+			(document.myform.state.value) + " " + (document.myform.zipcode.value) + 
+			" " + (document.myform.country.value) + 
+			"<br>" + "Email: " + (document.myform.email.value) +
+			"<br> Phone Number: " + (document.myform.phone.value) + 
+			"<br> Donation Type: " + (document.myform.donationType.value) +
+			"<br> Location Choice: " + (document.myform.locationChoice.value) + 
+			"<br> Description: " + (document.myform.description.value)
+			,
 		}).then(
 			message => alert("mail sent successfully")
 		);
@@ -162,18 +173,18 @@
 			<div class="form-group col-md-6">
 			<label>Donation Type: </label>
              <select id = "donationType">
-               <option value = "1">Clothing</option>
-               <option value = "2">Food</option>
-               <option value = "3">Furniture</option>
-               <option value = "4">Toys</option>
-			   <option value = "5">Other</option>
+               <option value = "Clothing">Clothing</option>
+               <option value = "Food">Food</option>
+               <option value = "Furniture">Furniture</option>
+               <option value = "Toys">Toys</option>
+	       <option value = "Other">Other</option>
              </select>
 			</div>
 			<div class="form-group col-md-6">
 			<label>How do you want to donate it? : </label>
              <select id = "locationChoice">
-               <option value = "1">Drop Off</option>
-               <option value = "2">Pick Up</option>
+               <option value = "Drop Off">Drop Off</option>
+               <option value = "Pick Up">Pick Up</option>
 			   </select>
 			</div>
             <div class="form-group">
