--- a/DonationI.html
+++ b/DonationI.html
@@ -111,8 +111,8 @@
 		Password : "!Test123456",
 		To : 'tempemailtest321@gmail.com',
 		From : "tempemailtest321@gmail.com",
-		Subject : "In-Kind Doantion from" + (document.myform.fname.value) + " " + (document.myform.lname.value),
-		Body : "This donation is from " + (document.myform.fname.value) + " " + (document.myform.lname.value) +
+		Subject : "In-Kind Donation from " + (document.myform.fname.value) + " " + (document.myform.lname.value),
+		Body : "This In-Kind Donation is from " + (document.myform.fname.value) + " " + (document.myform.lname.value) +
 			"<br> Address: " + (document.myform.address.value) + " " + (document.myform.city.value) + ", " + 
 			(document.myform.state.value) + " " + (document.myform.zipcode.value) + 
 			" " + (document.myform.country.value) + 
