--- a/healthAndWellbeing.html
+++ b/healthAndWellbeing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NVFS</title>
+  <title>health</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -98,11 +98,13 @@
       <div class="container">
 
         <header class="section-header wow fadeInUp">
-          <h3>Health and Well-Being</h3>
+          <h3>Health Services</h3>
+		</header>
           <p> Health care is critical to creating a strong foundation for overall health and well-being. Without access to both preventative health services and health care, it can feel impossible for individuals to function at work or at home. But not everyone living in the Northern Virginia region is able to afford health or dental insurance. NVFS health programs remove barriers to medical care so that families do not need to decide between medication, rent or food.
-				Proper nutrition education informs health decisions as well, and helps families make good choices about what they eat. By focusing on how food affects their bodies, family members can maintain better health overall and decrease the impacts of poor nutrition on their bodies. We also ensure that local families have access to food essentials to provide the nourishment they need each and every day.
+			</p>
+			<p>Proper nutrition education informs health decisions as well, and helps families make good choices about what they eat. By focusing on how food affects their bodies, family members can maintain better health overall and decrease the impacts of poor nutrition on their bodies. We also ensure that local families have access to food essentials to provide the nourishment they need each and every day.
 		  </p>
-        </header>
+        
 
         <div class="row">
 
