--- a/DonationI.html
+++ b/DonationI.html
@@ -99,8 +99,8 @@
 	<script>
 	function check()
 		{
-			document.getElementById("finish").innerHTML = "Thank you so much for your donation! This donation is bg sent to NVFS and " + 
-				"once it is done being verified, you will be contacted again to confirm the donation. Thank you so much for  donating!";
+			document.getElementById("finish").innerHTML = "Thank you so much for your donation! This donation was sent to NVFS and " + 
+				"once it is verified and approved, you will be contacted again to confirm the donation or correct any issues that may exist. Thank you so much for donating!";
 			
 			document.getElementById("myform").style.display="none";
 		}
