--- a/ImmigrationLegalService.html
+++ b/ImmigrationLegalService.html
@@ -102,7 +102,7 @@
 		  </header>
           <p> The U.S. legal system can be arduous to navigate, especially for those unfamiliar with the system, let alone the language. NVFS Legal Services assists immigrants and their families in achieving safety and stability in the United States by providing competent, culturally sensitive and low-cost immigration-related legal services.
 			</p>
-			<p>For a confidential consultation, please call our Legal Services hotline at 571.748.2806 for intake and referral. Note: Because of high call volume, it may take up to one week for one of NVFS’ immigration attorneys to return your call.
+			<p>For a confidential consultation, please call our Legal Services hotline at 571.748.2806 for intake and referral. Note: <em>Because of high call volume, it may take up to one week for one of NVFS’ immigration attorneys to return your call.</em>
 			</p>
 			<p>NVFS attorneys speak English and Spanish, and interpreters are available for other languages, including Arabic, Amharic, French and Farsi. We also assist other legal services providers in providing these same services through training, education and advocacy.
 			</p>
