--- a/homelessnessAndHousing.html
+++ b/homelessnessAndHousing.html
@@ -108,9 +108,11 @@
 		<h2>Our Housing Program</h2>
 			<p>NVFS offers several additional programs for residents of Fairfax and Prince William County. This assistance prevents homelessness from occurring in the first place.
 			</p>
-			<p>Fairfax County: Bridging Affordability • Short-Term Rental Assistance Program • Emergency Solutions Grants • Virginia Homeless Solutions Program
+			<p><strong>Fairfax County:</strong> 
+			Bridging Affordability • Short-Term Rental Assistance Program • Emergency Solutions Grants • Virginia Homeless Solutions Program
 			</p>
-			<p>Prince William County: Affordable Rental Units • Short-Term Rental Assistance Program • Utility Assistance Program
+			<p><strong>Prince William County:</strong> 
+			Affordable Rental Units • Short-Term Rental Assistance Program • Utility Assistance Program
 			</p>
 			<p>Across Northern Virginia, NVFS offers tenant-based rental assistance, community case management and permanent housing placement, 
 			as well as the Regional Housing Assistance Program for individuals living with HIV.
