--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <li><a href="#">Foster Care and Adoption</a></li>
               <li><a href="#">Health and Well-Being</a></li>
               <li><a href="#">Homelessness and Housing</a></li>
-              <li><a href="#">Immigration Services</a></li>
+              <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
               <li><a href="#">Mental Health</a></li>
               <li><a href="#">Workforce Development</a></li>
               <li><a href="#">Youth Initiatives</a></li>
