--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
               <li><a href="#">Early Childhood Development</a></li>
-              <li><a href="#">Foster Care and Adoption</a></li>
-              <li><a href="#">Health and Well-Being</a></li>
-              <li><a href="#">Homelessness and Housing</a></li>
-              <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
-              <li><a href="#">Mental Health</a></li>
-              <li><a href="#">Workforce Development</a></li>
+              <li><a href="#">                            Foster Care and Adoption</a></li>
+              <li><a href="healthAndWellbeing.html">      Health and Well-Being</a></li>
+              <li><a href="homelessnessAndHousing.html">  Homelessness and Housing</a></li>
+              <li><a href="ImmigrationLegalService.html"> Immigration Legal Services</a></li>
+              <li><a href="#">                            Mental Health</a></li>
+              <li><a href="#">                            Workforce Development</a></li>
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
