--- a/Volunteer.html
+++ b/Volunteer.html
@@ -34,12 +34,13 @@
     License: https://bootstrapmade.com/license/
   ======================================================= -->
 </head>
+
 <body>
 
   <!--==========================
     Header
   ============================-->
-  <header id="header">
+   <header id="header">
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
@@ -63,10 +64,10 @@
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li class="menu-has-children"><a>Donate</a>
+          <li class="menu-has-children"><a href="">Donate</a>
             <ul>
-              <li><a href="Donation.html">Monetary</a></li>
-              <li><a href="DonationI.html">In-Kind</a></li>
+              <li><a href="DonationI.html">Monetary</a></li>
+              <li><a href="Donation.html">In-Kind</a></li>
             </ul>
           </li>
           <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
@@ -74,33 +75,24 @@
           <li class="menu-active"><a href="#intro">Contact</a></li>
       </nav><!-- #nav-menu-container -->
     </div>
-  </header><!-- #header -->
-<section id="Volunteer">
-    <div class="container">
-
-      <header class="section-header">
-          <pre> </pre>
-          <pre></pre>
-        <h3>Volunteer!</h3>
-        <p>Search for a volunteer opportunity near you! We have options for individuals, families and groups. For general questions, contact us at <a href="mailto:volunteer@nvfs.org">volunteer@nvfs.org</a>.</p>
-      </header>
-
-      <div class="row about-cols">
-
-        <div class="col-md-4 wow fadeInUp">
-          <div class="about-col">
-            <div class="img">
-              <img src="img/volunteer-hero.jpg" alt="" class="img-fluid">
-              <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
-            </div>
-            <p> Check out the different volunteer oportunities on the NVFS website. Click below! </p>
-            <h2 class="title"><center><a href="https://www.nvfs.org/get-involved/volunteer/">Volunteer</a></center></h2>
-        </div>
-    </div>
-  </section>
-    <!--==========================
+	</header><!-- #header -->
+  
+   <!--==========================
+      Call To Action Section
+    ============================-->
+    <section id="call-to-action" class="wow fadeIn">
+      <div class="container text-center">
+        <h3>Volunteer</h3>
+        <p> Search for a volunteer opportunity near you! We have options for individuals, families and groups. For general questions, contact us at <a href="mailto:volunteer@nvfs.org.">volunteer@nvfs.org</a></p>
+		<p></p>
+		<p> “More people should volunteer. The real reward of volunteering is showing up and being involved with the clients, learning that they are just like anybody else you come in contact with.” </br> -Amy Sue </p>
+        <a class="cta-btn" href="https://www.nvfs.org/get-involved/volunteer/">Volunteer</a>
+      </div>
+    </section><!-- #call-to-action -->
+	
+	<!--==========================
     Footer
-  ============================-->
+	============================-->
   <footer id="footer">
 
     <div class="container">
@@ -118,30 +110,4 @@
       </div>
     </div>
   </footer><!-- #footer -->
-
-  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-  <!-- Uncomment below i you want to use a preloader -->
-  <!-- <div id="preloader"></div> -->
-
-  <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/superfish/hoverIntent.js"></script>
-  <script src="lib/superfish/superfish.min.js"></script>
-  <script src="lib/wow/wow.min.js"></script>
-  <script src="lib/waypoints/waypoints.min.js"></script>
-  <script src="lib/counterup/counterup.min.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="lib/isotope/isotope.pkgd.min.js"></script>
-  <script src="lib/lightbox/js/lightbox.min.js"></script>
-  <script src="lib/touchSwipe/jquery.touchSwipe.min.js"></script>
-  <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
-
-  <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
-
-</body>
-</html>
+	
