--- a/Volunteer.html
+++ b/Volunteer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Northern Virginia Family Service</title>
+  <title>BizPage Bootstrap Template</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -40,7 +40,7 @@
   <!--==========================
     Header
   ============================-->
-   <header id="header">
+ <header id="header">
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
@@ -64,10 +64,10 @@
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li class="menu-has-children"><a href="">Donate</a>
+          <li class="menu-has-children"><a>Donate</a>
             <ul>
-              <li><a href="DonationI.html">Monetary</a></li>
-              <li><a href="Donation.html">In-Kind</a></li>
+              <li><a href="Donation.html">Monetary</a></li>
+              <li><a href="DonationI.html">In-Kind</a></li>
             </ul>
           </li>
           <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
@@ -75,7 +75,7 @@
           <li class="menu-active"><a href="#intro">Contact</a></li>
       </nav><!-- #nav-menu-container -->
     </div>
-	</header><!-- #header -->
+  </header><!-- #header -->
   
    <!--==========================
       Call To Action Section
@@ -110,4 +110,3 @@
       </div>
     </div>
   </footer><!-- #footer -->
-	
