--- a/Volunteer.html
+++ b/Volunteer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BizPage Bootstrap Template</title>
+  <title>Volunteer</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -76,24 +76,43 @@
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
-  
-   <!--==========================
-      Call To Action Section
+
+  <!--==========================
+    Intro Section
+  ============================-->
+  <main id="main">
+
+    <!--==========================
+      Featured Services Section
     ============================-->
-    <section id="call-to-action" class="wow fadeIn">
-      <div class="container text-center">
-        <h3>Volunteer</h3>
-        <p> Search for a volunteer opportunity near you! We have options for individuals, families and groups. For general questions, contact us at <a href="mailto:volunteer@nvfs.org.">volunteer@nvfs.org</a></p>
-		<p></p>
-		<p> “More people should volunteer. The real reward of volunteering is showing up and being involved with the clients, learning that they are just like anybody else you come in contact with.” </br> -Amy Sue </p>
-        <a class="cta-btn" href="https://www.nvfs.org/get-involved/volunteer/">Volunteer</a>
+
+    <!--==========================
+      About Us Section
+    ============================-->
+
+    <!--==========================
+      Volunteer Section
+    ============================-->
+    <section id="services">
+      <div class="container">
+
+        <header class="section-header wow fadeInUp">
+          <h3>Volunteer</h3>
+          <p>Search for a volunteer opportunity near you! We have options for individuals, families and groups. For general questions, contact us at <a href="mailto:volunteer@nvfs.org.">volunteer@nvfs.org</a></p>
+          <p>“More people should volunteer. The real reward of volunteering is showing up and being involved with the clients, learning that they are just like anybody else you come in contact with.” </br> -Amy Sue</p>
+        </header>
+
+        <section id="call-to-action" class="wow fadeIn">
+          <div class="container text-center">
+            <a class="cta-btn" href="https://www.nvfs.org/get-involved/volunteer/">Volunteer</a>
+          </div>
+        </section>
+        
       </div>
-    </section><!-- #call-to-action -->
-	
-	<!--==========================
-    Footer
-	============================-->
-  <footer id="footer">
+    </section><!-- #services -->
+
+  </main>
+
 
     <div class="container">
       <div class="copyright">
@@ -110,3 +129,30 @@
       </div>
     </div>
   </footer><!-- #footer -->
+
+  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+  <!-- Uncomment below i you want to use a preloader -->
+  <!-- <div id="preloader"></div> -->
+
+  <!-- JavaScript Libraries -->
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/jquery/jquery-migrate.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="lib/easing/easing.min.js"></script>
+  <script src="lib/superfish/hoverIntent.js"></script>
+  <script src="lib/superfish/superfish.min.js"></script>
+  <script src="lib/wow/wow.min.js"></script>
+  <script src="lib/waypoints/waypoints.min.js"></script>
+  <script src="lib/counterup/counterup.min.js"></script>
+  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+  <script src="lib/isotope/isotope.pkgd.min.js"></script>
+  <script src="lib/lightbox/js/lightbox.min.js"></script>
+  <script src="lib/touchSwipe/jquery.touchSwipe.min.js"></script>
+  <!-- Contact Form JavaScript File -->
+  <script src="contactform/contactform.js"></script>
+
+  <!-- Template Main Javascript File -->
+  <script src="js/main.js"></script>
+
+</body>
+</html>
