--- a/Volunteer.html
+++ b/Volunteer.html
@@ -98,7 +98,7 @@
         <header class="section-header wow fadeInUp">
 
           <h3>Volunteer</h3>
-          <p>Search for a volunteer opportunity near you! We have options for individuals, families and groups. For general questions, contact us at <a href="mailto:volunteer@nvfs.org.">volunteer@nvfs.org</a></p>
+          <p>Search for a volunteer opportunity near you! We have options for individuals, families and groups. For general questions, contact us at <a href="mailto:volunteer@nvfs.org">volunteer@nvfs.org</a></p>
 
           <div class="img">
             <img src="img/volunteer.jpg" alt="" class="img-fluid">
