--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <ul>
               <li><a href="#">Early Childhood Development</a></li>
               <li><a href="#">Foster Care and Adoption</a></li>
-              <li><a href="healthAndWellbeing.html">Health and Well-Being</a></li>
-              <li><a href="homelessnessAndHousing.html">Homelessness and Housing</a></li>
+              <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
+              <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
-              <li><a href="#">Mental Health</a></li>
+              <li><a href="MentalHealth.html">Mental Health</a></li>
               <li><a href="#">Workforce Development</a></li>
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
