--- a/Volunteer.html
+++ b/Volunteer.html
@@ -54,13 +54,13 @@
           <li class="menu-active"><a href="index.html">Home</a></li>
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
-              <li><a href="#">Early Childhood Development</a></li>
+             <li><a href="#">Early Childhood Development</a></li>
               <li><a href="#">Foster Care and Adoption</a></li>
-              <li><a href="#">Health and Well-Being</a></li>
-              <li><a href="#">Homelessness and Housing</a></li>
-              <li><a href="#">Immigration Services</a></li>
-              <li><a href="#">Mental Health</a></li>
-              <li><a href="#">Workforce Development</a></li>
+              <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
+              <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
+              <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
+              <li><a href="MentalHealth.html">Mental Health</a></li>
+              <li><a href="WorkplaceDevelopment.html">Workforce Development</a></li>
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
