--- a/MentalHealth.html
+++ b/MentalHealth.html
@@ -54,13 +54,13 @@
           <li class="menu-active"><a href="index.html">Home</a></li>
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
-             <li><a href="#">Early Childhood Development</a></li>
+              <li><a href="#">Early Childhood Development</a></li>
               <li><a href="#">Foster Care and Adoption</a></li>
-              <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
-              <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
-              <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
+              <li><a href="#">Health and Well-Being</a></li>
+              <li><a href="#">Homelessness and Housing</a></li>
+              <li><a href="#">Immigration Services</a></li>
               <li><a href="MentalHealth.html">Mental Health</a></li>
-              <li><a href="WorkplaceDevelopment.html">Workforce Development</a></li>
+              <li><a href="#">Workforce Development</a></li>
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
@@ -121,9 +121,9 @@
           <a href="https://www.nvfs.org/our-services/early-childhood-development/">Early Childhood Mental Health</a><br>
           <a href="https://www.nvfs.org/our-services/workforce-development/training-futures/">Training Futures</a><br><br>
           <h4>Home Visiting/Neighborhood-Based Services</h4>
-          <a href="https://www.nvfs.org/our-services/youth-initiatives/">Violence Prevention and Intervention Program (VPIP)</a>
-          <a href="https://www.nvfs.org/our-services/early-childhood-development/healthy-families/">Perinatal Maternal Mental Health Project</a>
-          <a href="https://www.nvfs.org/our-services/youth-initiatives/">Family Reunification Program Trauma Mental Health Services</a>
+          <a href="https://www.nvfs.org/our-services/youth-initiatives/">Violence Prevention and Intervention Program (VPIP)</a><br>
+          <a href="https://www.nvfs.org/our-services/early-childhood-development/healthy-families/">Perinatal Maternal Mental Health Project</a><br>
+          <a href="https://www.nvfs.org/our-services/youth-initiatives/">Family Reunification Program Trauma Mental Health Services</a><br>
         </header>
       </div>
     </section><!-- #services -->
