--- a/Resources.html
+++ b/Resources.html
@@ -110,15 +110,15 @@
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
-            <h4 class="title"><a href="">Homelessness and Housing</a></h4>
+            <h4 class="title"><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-            <h4 class="title"><a href="connect.php">Mental Health</a></h4>
+            <h4 class="title"><a href="MentalHealth.html">Mental Health</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
-            <h4 class="title"><a href="">Workforce Development</a></h4>
+            <h4 class="title"><a href="WorkplaceDevelopment.html">Workforce Development</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-barcode-outline"></i></div>
@@ -130,11 +130,11 @@
           </div>
 		    <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-people-outline"></i></div>
-            <h4 class="title"><a href="">Immigration Legal Services</a></h4>
+            <h4 class="title"><a href="ImmigrationLegalService.html">Immigration Legal Services</a></h4>
           </div>
 		    <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-people-outline"></i></div>
-            <h4 class="title"><a href="">Health and Well Being</a></h4>
+            <h4 class="title"><a href="HealthAndWellBeing.html">Health and Well Being</a></h4>
           </div>
 
         </div>
