--- a/WorkplaceDevelopment.html
+++ b/WorkplaceDevelopment.html
@@ -54,13 +54,13 @@
           <li class="menu-active"><a href="index.html">Home</a></li>
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
-             <li><a href="#">Early Childhood Development</a></li>
+              <li><a href="#">Early Childhood Development</a></li>
               <li><a href="#">Foster Care and Adoption</a></li>
-              <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
-              <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
-              <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
+              <li><a href="#">Health and Well-Being</a></li>
+              <li><a href="#">Homelessness and Housing</a></li>
+              <li><a href="#">Immigration Services</a></li>
               <li><a href="MentalHealth.html">Mental Health</a></li>
-              <li><a href="WorkplaceDevelopment.html">Workforce Development</a></li>
+              <li><a href="#">Workforce Development</a></li>
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
@@ -112,7 +112,7 @@
               <h3><center>Training Futures</center></h3>
               <strong><font color="white">Janice Halowich</font></strong><br>
               <font color="white">Program Manager</font><br><br>
-              <a href="mailto:jhalowich@nvfs.org">jhalowich@nvfs.org</a><font color="white"> / (571)748-2500</font><br><br>
+              <font color="white"><a href="mailto:jhalowich@nvfs.org">jhalowich@nvfs.org</a> / (571)748-2500</font><br><br>
               <font color="white">8603 Westwood Center Dr. <br> Suite 300 <br> Vienna, VA 22182</font><br>
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/training-futures/">Additional Information</a>
             </div>
@@ -129,7 +129,7 @@
               <h3><center>Vehicles for Change</center></h3>
               <strong><font color="white">Zoraida Tapia</font></strong><br>
               <font color="white">Housing Counselor II</font><br><br>
-              <a href="mailto:ztapia@nvfs.org">ztapia@nvfs.org</a><font color="white"> / (571)748-2561</font><br><br>
+              <font color="white"><a href="mailto:ztapia@nvfs.org">ztapia@nvfs.org</a> / (571)748-2561</font><br><br>
               <font color="white">10455 White Granite Dr. <br> Suite 100 <br> Oakton, VA 22124</font><br>
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/vehicles-for-change/">Additional Information</a>
             </div>
@@ -140,7 +140,7 @@
              <div class="container text-center">
                 <h3><center>TeamUp</center></h3>
                 <strong><font color="white">Julie Mullen</font></strong><br>
-                <a href="mailto:jmullen@nvfs.org">jmullen@nvfs.org</a><font color="white"> / (571)748-2628</font><br><br>
+                <font color="white"><a href="mailto:jmullen@nvfs.org">jmullen@nvfs.org</a> / (571)748-2628</font><br><br>
             </div>
             </section>
             
