--- a/Resources.html
+++ b/Resources.html
@@ -60,7 +60,7 @@
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
               <li><a href="MentalHealth.html">Mental Health</a></li>
-              <li><a href="WorkplaceDevelopment.html">Workforce Development</a></li>
+              <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
@@ -118,7 +118,7 @@
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
-            <h4 class="title"><a href="WorkplaceDevelopment.html">Workforce Development</a></h4>
+            <h4 class="title"><a href="WorkforceDevelopment.html">Workforce Development</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-barcode-outline"></i></div>
