Update and rename WorkplaceDevelopment.html to WorkforceDevelopment.html

--- a/WorkforceDevelopment.html
+++ b/WorkforceDevelopment.html
@@ -96,7 +96,7 @@
     <section id="services">
       <div class="container">
         <header class="section-header wow fadeInUp">
-          <h3>Workplace Development</h3>
+          <h3>Workforce Development</h3>
           <h4><center>BUILDING A STRONGER NORTHERN VIRGINIA WORKFORCE</center></h4>
           <p>NVFS offers a variety of programs that provide individuals with the necessary skills, knowledge and resources to build brighter futures for themselves, for their families and for the Northern Virginia community. A parent with marketable job skills, and sometimes simply the ability to travel to a higher-paying job, has the opportunity to break the cycle of poverty within their family.
           </br></br> At NVFS, we help people reach their fullest potential and create opportunities for a brighter, more hopeful future by: enhancing workforce skills to obtain higher-paying jobs with benefits and providing transportation options to increase schedule flexibility. <br><br>
@@ -104,7 +104,7 @@
         </p>
 
           <div class="img">
-            <img src="img/workplace.jpg" alt="" class="img-fluid">
+            <img src="img/workforce.jpg" alt="" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
