--- a/DonationI.html
+++ b/DonationI.html
@@ -60,7 +60,7 @@
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
               <li><a href="MentalHealth.html">Mental Health</a></li>
-              <li><a href="WorkplaceDevelopment.html">Workforce Development</a></li>
+              <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
@@ -71,8 +71,8 @@
             </ul>
           </li>
           <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
-          <li class="menu-active"><a href="#">About</a></li>
-          <li class="menu-active"><a href="#">Contact</a></li>
+          <li class="menu-active"><a href="About.html">About</a></li>
+          <li class="menu-active"><a href="Contact.html">Contact</a></li>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
