--- a/HealthAndWellBeing.html
+++ b/HealthAndWellBeing.html
@@ -51,7 +51,7 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Home</a></li>
+          <li class="menu-active"><a href="index.html">Home</a></li>
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
               <li><a href="#">Early Childhood Development</a></li>
@@ -60,7 +60,7 @@
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
               <li><a href="MentalHealth.html">Mental Health</a></li>
-              <li><a href="WorkplaceDevelopment.html">Workforce Development</a></li>
+              <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
@@ -70,9 +70,9 @@
               <li><a href="#">In-Kind</a></li>
             </ul>
           </li>
-          <li class="menu-active"><a href="#intro">Volunteer</a></li>
-          <li class="menu-active"><a href="#intro">About</a></li>
-          <li class="menu-active"><a href="#intro">Contact</a></li>
+          <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
+          <li class="menu-active"><a href="#About.html">About</a></li>
+          <li class="menu-active"><a href="#Contact.html">Contact</a></li>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
