--- a/WorkforceDevelopment.html
+++ b/WorkforceDevelopment.html
@@ -56,11 +56,11 @@
             <ul>
               <li><a href="#">Early Childhood Development</a></li>
               <li><a href="#">Foster Care and Adoption</a></li>
-              <li><a href="#">Health and Well-Being</a></li>
-              <li><a href="#">Homelessness and Housing</a></li>
-              <li><a href="#">Immigration Services</a></li>
+              <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
+              <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
+              <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
               <li><a href="MentalHealth.html">Mental Health</a></li>
-              <li><a href="#">Workforce Development</a></li>
+              <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
@@ -71,8 +71,8 @@
             </ul>
           </li>
           <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
-          <li class="menu-active"><a href="#intro">About</a></li>
-          <li class="menu-active"><a href="#intro">Contact</a></li>
+          <li class="menu-active"><a href="About.html">About</a></li>
+          <li class="menu-active"><a href="Contact.html">Contact</a></li>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
