--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
               <li><a href="MentalHealth.html">Mental Health</a></li>
-              <li><a href="WorkplaceDevelopment.html">Workforce Development</a></li>
+              <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
