--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li class="menu-active"><a href="index.html">Home</a></li>
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
-              <li><a href="#">Early Childhood Development</a></li>
+              <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
               <li><a href="#">Foster Care and Adoption</a></li>
               <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
