--- a/read.html
+++ b/read.html
@@ -1,37 +1,32 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/ionic.css">
+
+  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" src="js/jquery.js"></script>
+	
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script type="text/javascript">
+	
         $(document).ready(function() {
             var url = "https://nvfsserver.azurewebsites.net/sqlTest2.php";
             $.getJSON(url, function(result) {
                 console.log(result);
                 $.each(result, function(i, field) {
-                    var FirstName = field.FirstName;
-                    var LastName = field.LastName;
-                    var Address = field.Address;
-                    var Phone = field.Phone;
-                    $("#listview").append("<a class='item' href='form.html?id=" + FirstName + "&title=" + LastName + "&duration=" + Address + "&price=" + Phone + "'><span class='item-note'>$" + price + "</span><h2>" + title + " </h2><p>" + duration + "</p></a>");
+                    var id = field.FirstName;
+                    var title = field.LastName;
+                    var duration = field.Phone;
+                    var price = field.Address;
+                    $("#listview").append("<a class='item' href='form.html?id=" + id + "&title=" + title + "&duration=" + duration + "&price=" + price + "'><span class='item-note'>$" + price + "</span><h2>" + title + " </h2><p>" + duration + "</p></a>");
                 });
             });
         });
     </script>
-	<script>
-var xmlhttp = new XMLHttpRequest();
-
-xmlhttp.onreadystatechange = function() {
-  if (this.readyState == 4 && this.status == 200) {
-    myObj = JSON.parse(this.responseText);
-    document.getElementById("demo").innerHTML = myObj.name;
-  }
-};
-xmlhttp.open("GET", "demo_file.php", true);
-xmlhttp.send();
-</script>
 </head>
-
 
 <body>
     <div class="bar bar-header bar-positive" style="margin-bottom:80px; ">
