--- a/DonationI.html
+++ b/DonationI.html
@@ -41,12 +41,10 @@
     Header
   ============================-->
    <header id="header">
-    <div class="container-fluid">
+      <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">NVFS</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+        <a href="#intro"><img src="img/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -54,7 +52,7 @@
           <li class="menu-active"><a href="index.html">Home</a></li>
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
-              <li><a href="#">Early Childhood Development</a></li>
+              <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
               <li><a href="#">Foster Care and Adoption</a></li>
               <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
@@ -64,10 +62,10 @@
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li class="menu-has-children"><a href="">Donate</a>
+          <li class="menu-has-children"><a href=""> Donate</a>
             <ul>
               <li><a href="Donation.html">Monetary</a></li>
-              <li><a href="DonationI.html">In-Kind</a></li>
+              <li><a href="DonationI">In-Kind</a></li>
             </ul>
           </li>
           <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
