--- a/HeadStart.html
+++ b/HeadStart.html
@@ -41,12 +41,10 @@
     Header
   ============================-->
  <header id="header">
-    <div class="container-fluid">
+     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">NVFS</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>
+        <a href="#intro"><img src="img/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -64,15 +62,15 @@
               <li><a href="#">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li class="menu-has-children"><a>Donate</a>
+          <li class="menu-has-children"><a href=""> Donate</a>
             <ul>
               <li><a href="Donation.html">Monetary</a></li>
-              <li><a href="DonationI.html">In-Kind</a></li>
+              <li><a href="DonationI">In-Kind</a></li>
             </ul>
           </li>
           <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
-          <li class="menu-active"><a href="#About.html">About</a></li>
-          <li class="menu-active"><a href="#Contact.html">Contact</a></li>
+          <li class="menu-active"><a href="About.html">About</a></li>
+          <li class="menu-active"><a href="Contact.html">Contact</a></li>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
