--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   <script src="contactform/contactform.js"></script>
 
   <!-- Template Main Javascript File -->
-  <script src="js/main2.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
