--- a/HealthyFamilies.html
+++ b/HealthyFamilies.html
@@ -123,6 +123,8 @@
   </main>
 
 
+ <footer id="footer">
+
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
