--- a/MentalHealth.html
+++ b/MentalHealth.html
@@ -131,6 +131,8 @@
   </main>
 
 
+ <footer id="footer">
+
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
