--- a/Resources.html
+++ b/Resources.html
@@ -146,6 +146,7 @@
     
   </main>
 
+ <footer id="footer">
 
     <div class="container">
       <div class="copyright">
@@ -162,7 +163,6 @@
       </div>
     </div>
   </footer><!-- #footer -->
-
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
   <!-- <div id="preloader"></div> -->
