--- a/WorkforceDevelopment.html
+++ b/WorkforceDevelopment.html
@@ -150,6 +150,7 @@
 
   </main>
 
+ <footer id="footer">
 
     <div class="container">
       <div class="copyright">
@@ -166,7 +167,6 @@
       </div>
     </div>
   </footer><!-- #footer -->
-
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
   <!-- <div id="preloader"></div> -->
