--- a/insert.html
+++ b/insert.html
@@ -71,7 +71,7 @@
 <body>
     <div class="bar bar-header bar-positive" style="margin-bottom:80px; ">
         <h1 class="title">Insert Database</h1>
-        <a class="button button-clear" href="readjson.html">Read JSON</a>
+        <a class="button button-clear" href="read.html">Read JSON</a>
     </div><br /><br />
     <div class="list">
         <input type="hidden" id="id" value="" />
