--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
               <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
-              <li><a href="read.html">Foster Care and Adoption</a></li>
+              <li><a href="insert.html">Foster Care and Adoption</a></li>
               <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
