--- a/ImmigrationLegalService.html
+++ b/ImmigrationLegalService.html
@@ -99,7 +99,8 @@
 
         <header class="section-header wow fadeInUp">
           <h3>Legal Service</h3>
-		  </header>
+		  <h4><center>IMMIGRANTS, REFUGEES & ASYLUM SEEKERS</center></h4>
+		 </header>
           <p> The U.S. legal system can be arduous to navigate, especially for those unfamiliar with the system, let alone the language. NVFS Legal Services assists immigrants and their families in achieving safety and stability in the United States by providing competent, culturally sensitive and low-cost immigration-related legal services.
 			</p>
 			<p>For a confidential consultation, please call our Legal Services hotline at 571.748.2806 for intake and referral. Note: <em>Because of high call volume, it may take up to one week for one of NVFS’ immigration attorneys to return your call.</em>
@@ -133,7 +134,21 @@
 			<p>We are unable to assist with employment-based applications, student visas or tourist visas. For assistance in obtaining low-cost representation in types of cases not listed above, please visit  <a href="http://www.lsnv.org/">Legal Services of Northern Virginia</a>.</p>
 		
         
+		<div class="img">
+            <img src="img/legal.jpg" alt="" class="img-fluid">
+          </div>
 
+          <section id="call-to-action" class="wow fadeIn">
+            <div class="container text-center">
+              <h3><center>Legal Hotline</center></h3>
+              <font color="white">
+                571.748.2806<br><br>
+                Se habla español<br><br>Please note that due to high call volume, 
+				it may take up to one week for one of our immigration attorneys
+				to return your call.
+              </font>
+            </div>
+          </section>
     
       </div>
 	  
